# loupepy

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build_package.yml  ci.yml
src/: convert.py  setup.py  utils.py
src/loupepy/: __init__.py  convert.py  setup.py  utils.py
tests/: test_convert.py  test_setup.py  test_validation.py  tmp.h5ad
