[project]
name = "loupepy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scanpy>=1.11.0",
]

[project.scripts]
loupepy = "loupepy:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "mypy-extensions>=1.0.0",
    "pandas-stubs>=2.2.3.250308",
    "pytest>=8.3.5",
    "scipy-stubs>=1.15.2.1",
]
