[project]
name = "loupepy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anndata>=0.11.4",
    "certifi>=2025.4.26",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[project.scripts]
loupepy = "loupepy:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "mypy-extensions>=1.0.0",
    "pandas-stubs>=2.2.3.250308",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.5",
    "scanpy>=1.11.1",
    "scipy-stubs>=1.15.2.1",
]
